Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -201,11 +201,11 @@
     "cant-delete-default-tax": "No se puede eliminar el impuesto predeterminado",
     "cant-delete-default-warehouse": "No se puede eliminar el almacén por defecto",
     "cant-delete-last-user": "No se puede eliminar al último usuario",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-variant-with-documents": "Produkt nebo varianta %reference% nelze smazat, protože již byl zakoupen nebo prodán. Ale můžete jej uzamknout, pokud chcete.",
     "cant-load-controller": "No se puede cargar el controlador '%controllerName%'.",
     "cant-modify-reference": "Imposible modificar la referencia.",
     "cant-remove-accounting-entry": "No se puede eliminar el asiento",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "Fakturu nelze odstranit, pokud již má vrácenku",
     "cant-remove-receipt": "No se puede eliminar el recibo",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Tarjeta",
@@ -230,7 +230,7 @@
     "choose-currency": "Elige divisa",
     "choose-doc-type": "Seleccionar el tipo de documento",
     "choose-employee": "Elige empleado",
-    "choose-files": "Seleccionar archivos",
+    "choose-files": "Vyberte soubory",
     "choose-payment-method": "Elige forma de pago",
     "choose-serie": "Elige serie",
     "choose-source": "Elegir el origen",
@@ -280,7 +280,7 @@
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
     "company-manager": "Administrador de la empresa",
     "company-name": "Nombre de empresa",
-    "company-warehouse": "Empresa\/Almacén",
+    "company-warehouse": "Společnost\/Sklad",
     "comparative": "Comparativo",
     "compared": "Comparado",
     "compatible": "Compatible",
@@ -317,17 +317,17 @@
     "copy-subaccounts": "Copiar plan contable",
     "core-update": "Actualización del núcleo a la versión %version%",
     "core-update-warning": "Advertencias de actualización",
-    "correct": "Correcto",
-    "cost": "Coste",
+    "correct": "Správně",
+    "cost": "Náklad",
     "cost-price": "Precio de coste",
     "cost-price-policy": "Política de precio de coste",
     "counterpart": "Contrapartida",
     "countries": "Países",
     "country": "País",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "%codiso% nepatří do žádné země Evropské unie",
     "create": "Crear",
     "create-accounting-entry": "Crear Asiento Contable",
-    "create-delivery-note": "Crear albarán",
+    "create-delivery-note": "Vytvořit dodací list",
     "create-estimation": "Crear presupuesto",
     "create-invoice": "Crear factura",
     "create-new-record": "Crear nuevo registro",
