--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -111,7 +111,7 @@
     "approve-document": "Dokument genehmigen",
     "approve-document-same-date": "Dokument zum gleichen Datum genehmigen",
     "approved": "genehmigt",
-    "april": "Abril",
+    "april": "April",
     "are-you-sure": "Das kann nicht rückgängig gemacht werden. Sind Sie sicher, dass Sie fortfahren möchten?",
     "are-you-sure-action": "Bestätigung nötig. Wollen Sie fortfahren?",
     "asset": "Asset",
@@ -126,18 +126,18 @@
     "attribute-values": "Attributwerte",
     "attributes": "Attribute",
     "audio": "Audio",
-    "august": "Agosto",
+    "august": "August",
     "auth-token-invalid": "Clave de API no válida",
     "authentication": "Authentifizierung",
     "auto": "Auto",
     "auto-apply-to": "Automatisch anwenden auf",
     "automatic": "Automático",
     "available": "Verfügbar",
-    "average": "Media",
+    "average": "Durchschnitt",
     "average-cost": "Durchschnittskosten",
     "average-purchase-price": "Durchschnittlicher Kaufpreis",
     "back": "Volver",
-    "background-color": "Color de fondo",
+    "background-color": "Farbe des Hintergrunds",
     "background-overlay": "Color de fondo superpuesto (overlay)",
     "badge": "Abzeichen",
     "balance": "Saldo",
