--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -318,16 +318,16 @@
     "core-update": "%version%. bertsiora muinaren eguneraketa",
     "core-update-warning": "Eguneraketa oharrak",
     "correct": "Zuzena",
-    "cost": "Coste",
+    "cost": "Kostua",
     "cost-price": "Kostu prezioa",
     "cost-price-policy": "Kostuen prezio politika",
     "counterpart": "Kontrakontua",
     "countries": "Estatuak",
     "country": "Estatua",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "%codiso% ez da Europako Batasunaren herrialde baterik",
     "create": "Sortu",
     "create-accounting-entry": "Kontabilitate Idazpena Sortu",
-    "create-delivery-note": "Crear albarán",
+    "create-delivery-note": "Entregue-nota sortu",
     "create-estimation": "Aurrekontua sortu",
     "create-invoice": "Faktura sortu",
     "create-new-record": "Erregistro berria sortu",
@@ -340,7 +340,7 @@
     "crons": "Crons",
     "currency": "Dibisa",
     "currency-position": "Moneta sinboloaren posizioa",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Laukiztako gertakariak",
     "current-risk": "Oraingo arriskua",
     "customer": "Bezeroa",
     "customer-account-not-found": "Bezeroaren azpikontua ez da aurkitu",
@@ -374,7 +374,7 @@
     "dashboard-for": "%company%-ren arbela",
     "data-source": "Jatorrizko datuak",
     "database": "Datu basea",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Errorea datubasearekin konetatzerakoan",
     "database-name-must-be-lowercase": "Datu-basearen izena minuskuletan izan behar du",
     "date": "Data",
     "date-in": "Sarrera data",
@@ -386,7 +386,7 @@
     "dateentry-wildcard-info": "Kontabilitate idazpenaren goiburuan adierazitako data",
     "day": "Eguna",
     "days": "Egunak",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Egunen log bistaratze mantenua",
     "days-until-expiration": "Egunak epemuga arte",
     "db-host": "Datu basearen zerbitzaria",
     "db-name": "Datu-basearen izena",
@@ -397,7 +397,7 @@
     "db-user": "Datu-base erabiltzailea",
     "debit": "Zorra",
     "debug-mode": "Zuzenketa modua",
-    "december": "Diciembre",
+    "december": "Abendua",
     "decimal-separator": "Hamartar banatzailea",
     "decimals": "Hamartarrak",
     "default": "Lehenetsia",
@@ -413,10 +413,10 @@
     "delete-closing": "Ixte idazpenak ezabatu",
     "delete-data": "Datuak ezabatu",
     "delete-file": "Artxiboa ezabatu",
-    "delete-logs": "Eliminar historial",
+    "delete-logs": "Historiala ezabatu",
     "delete-opening": "Irekitze idazpena ezabatu",
     "delete-record": "Erregistroa ezabatu",
-    "Deleted": "Eliminado",
+    "Deleted": "Ezabatua",
     "deleted-model": "Ezabatuta %model% (%key%) %desc%",
     "delivery-note": "Albarana",
     "delivery-note-email-subject": "Zure %code%. albarana",
@@ -449,14 +449,14 @@
     "design": "Diseinua",
     "destination-warehouse": "Biltegi jasotzailea",
     "detail": "Xehetasuna",
-    "details": "Detalles",
+    "details": "Xehetasunak",
     "difference": "Diferentzia",
     "different-passwords": "%userNick% erabiltzailearen pasahitzak ez dira berdinak",
     "different-than": "Honen ezberdina",
     "disable": "Ezgaitu",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Desgaitu plug-inak",
     "disabled": "Ezgaitua",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Desgaitutako plug-in-ak",
     "discharge-date": "Alta data: %date%",
     "discount": "Beherapena",
     "display": "Bistaratzea",
