--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -201,11 +201,11 @@
     "cant-delete-default-tax": "L'imposition par défaut ne peut être supprimée",
     "cant-delete-default-warehouse": "L'entrepôt par défaut ne peut être supprimé",
     "cant-delete-last-user": "Le dernier utilisateur ne peut être supprimé",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-variant-with-documents": "Impossible de supprimer le produit ou la variante %reference% car il a déjà été acheté ou vendu. Mais vous pouvez le bloquer si vous le souhaitez.",
     "cant-load-controller": "Impossible de charger le contrôleur '%controllerName%'.",
     "cant-modify-reference": "Impossible d'éditer la référence.",
     "cant-remove-accounting-entry": "L'entrée comptable ne peut être supprimée",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "Impossible de supprimer une facture qui a déjà un remboursement",
     "cant-remove-receipt": "Le reçu ne peut être retiré",
     "cant-update-audit-log": "Un enregistrement d'audit ne peut être modifié",
     "card": "Carte",
@@ -221,16 +221,16 @@
     "charge-date": "Date de facturation",
     "chart": "Graphique",
     "charts": "Graphiques",
-    "chat": "Chat",
+    "chat": "Discussion",
     "check-table": "Erreur lors de la vérification de la table '%tableName%'",
-    "check-vies": "Comprobar VIES",
+    "check-vies": "Vérifier VIES",
     "checked": "Vérifié",
-    "children": "Niño",
+    "children": "Enfant",
     "children-accounts": "Comptes enfants",
     "choose-currency": "Choisissez la devise",
     "choose-doc-type": "Sélectionnez le type de document",
     "choose-employee": "Choisissez un employé",
-    "choose-files": "Seleccionar archivos",
+    "choose-files": "Choisir des fichiers",
     "choose-payment-method": "Choisissez le mode de paiement",
     "choose-serie": "Choisissez une série",
     "choose-source": "Choisissez l'origine",
@@ -255,14 +255,14 @@
     "code": "code",
     "codiso": "Code ISO",
     "color": "Couleur",
-    "color-danger": "Color peligro",
-    "color-dark": "Color oscuridad",
-    "color-info": "Color info",
-    "color-light": "Color luz",
-    "color-primary": "Color primario",
-    "color-secondary": "Color secundario",
-    "color-success": "Color éxito",
-    "color-warning": "Color advertencia",
+    "color-danger": "Couleur danger",
+    "color-dark": "Couleur sombre",
+    "color-info": "Couleur information",
+    "color-light": "Couleur claire",
+    "color-primary": "Couleur primaire",
+    "color-secondary": "Couleur secondaire",
+    "color-success": "Couleur succès",
+    "color-warning": "Couleur avertissement",
     "colors": "Couleurs",
     "column": "Columna",
     "columns": "Colonnes",
@@ -280,8 +280,8 @@
     "company-commission-info": "Cela s'appliquera uniquement à l'entreprise sélectionnée",
     "company-manager": "Chef d'entreprise",
     "company-name": "Nom de la compagnie",
-    "company-warehouse": "Empresa\/Almacén",
-    "comparative": "Comparativo",
+    "company-warehouse": "Entreprise\/Entrepôt",
+    "comparative": "Comparatif",
     "compared": "Comparé à",
     "compatible": "Compatible",
     "completed": "Terminé",
