--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -119,8 +119,8 @@
     "attached-file": "Attached file",
     "attached-files": "Attached files",
     "attribute": "Attributo",
-    "attribute-value-1": "Attribute value 1",
-    "attribute-value-2": "Attribute value 2",
+    "attribute-value-1": "Valore attributo 1",
+    "attribute-value-2": "Valore attributo 2",
     "attribute-value-3": "valore attributo 3",
     "attribute-value-4": "valore attributo 4",
     "attribute-values": "Attribute values",
@@ -154,33 +154,33 @@
     "banking-movements": "Movimenti bancari",
     "barcode": "Codice a barre",
     "bcc": "BCC",
-    "big": "big",
+    "big": "grande",
     "billing": "Billing",
     "billing-address": "Indirizzo Di Fatturazione",
     "birth-date": "Data di nascita",
-    "birthday": "birthday",
+    "birthday": "Compleanno",
     "block-date": "Block date",
     "blocked": "bloccato",
     "blocked-date": "Bloccato a",
-    "body": "Body",
+    "body": "Corpo",
     "book": "Reserve",
-    "box-closed-ok": "Box closed correctly",
-    "boxes": "Cajas",
-    "browse": "Examinar",
+    "box-closed-ok": "Scatola chiusa correttamente",
+    "boxes": "Scatole",
+    "browse": "Navigare",
     "business-name": "Nome commerciale",
-    "buy": "buy",
+    "buy": "comprare",
     "cache": "nascondiglio",
     "cache-dir": "Directory cache '0'",
     "calculate": "calculate",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Differenza trovata nel calcolare il netto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Differenza trovata nel calcolare il sovrapprezzo. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Differenza trovata nel calcolare l'IVA totale. %tax% VS %tax2%",
     "calculation": "calculation",
-    "calendar": "calendar",
+    "calendar": "calendario",
     "can-not-open-zip-file": "Impossibile aprire il file zip '0'",
     "cancel": "Annulla",
     "cancel-data": "Annulla modifiche o operazione",
-    "cancelled": "cancelled",
+    "cancelled": "cancellato",
     "cannot-generate-accounting-entry": "Errore durante la generazione della voce fattura %invoice%",
     "cant-assign-date-already-regularized": "Non si può assegnare la data 0 perché esiste già una regolarizzazione di 1 per quel periodo.",
     "cant-assing-subaccount-supplier": "Impossibile associare il subaccount al provider 0",
