--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -337,7 +337,7 @@
     "credit": "Haber",
     "crm": "CRM",
     "cron-job": "Tarea programada",
-    "crons": "Crons",
+    "crons": "Crony",
     "currency": "Divisa",
     "currency-position": "Posición símbolo de divisa",
     "current-quarter": "Bieżący kwartał",
@@ -454,9 +454,9 @@
     "different-passwords": "Las contraseñas no coinciden para el usuario %userNick%",
     "different-than": "Diferente que",
     "disable": "Desactivar",
-    "disable-plugins": "Desactivar plugins",
+    "disable-plugins": "Wyłącz wtyczki",
     "disabled": "Desactivado",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Wyłączone wtyczki",
     "discharge-date": "Fecha de alta: %date%",
     "discount": "Descuento",
     "display": "Visualización",
@@ -479,7 +479,7 @@
     "documents-generated": "Documentos generados",
     "domiciled": "Domiciliado",
     "done": "Realizado",
-    "done-date": "Fecha finalización",
+    "done-date": "Data zakończenia",
     "dont-sell-above-pvp": "No vender por encima de PVP",
     "dont-sell-below-cost": "No vender por debajo de coste",
     "download": "Descargar",
@@ -491,7 +491,7 @@
     "dto": "Dto.",
     "dto-2": "Dto. 2",
     "duplicate-record": "Registro duplicado",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Zduplikowana referencja: '%reference%'",
     "duplicated-request": "Petición duplicada",
     "duration": "Duración",
     "edit": "Editar",
@@ -502,7 +502,7 @@
     "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, panel de control, preferencias de aplicación.",
     "email-not-sent": "No enviado",
     "email-notification": "Notificación por email",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
+    "email-notification-disabled": "Powiadomienie e-mail %name% jest wyłączone",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "Las respuestas a este email irán a %email%",
@@ -521,7 +521,7 @@
     "enable-api": "Activar API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "Activo",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Wtyczki aktywne",
     "encrypt": "Encriptación",
     "end-date": "Fecha de fin",
     "end-time": "Hora finalización",
@@ -533,7 +533,7 @@
     "equivalent-account-not-found": "No se ha encontrado la cuenta equivalente a %accountCode% en el ejercicio %exerciseCode% ¿Has importado el plan contable?",
     "equivalent-subaccount-not-found": "No se ha encontrado ninguna subcuenta equivalente a %subAccountCode% para copiar.",
     "error": "ERROR: %error%",
-    "error-checking-vat-number": "Error comprobando el número '%vat-number%' en el sistema VIES",
+    "error-checking-vat-number": "Błąd podczas sprawdzania numeru VAT '%vat-number%' w systemie VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
     "error-deleting-lines": "Error al eliminar líneas",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
@@ -568,8 +568,8 @@
     "estimation-email-subject": "Su presupuesto %code%",
     "estimation-email-text": "Buenos días, le adjunto su presupuesto %code%",
     "estimations": "Presupuestos",
-    "event": "Evento",
-    "events": "Eventos",
+    "event": "Wydarzenie",
+    "events": "Wydarzenia",
     "exceptions": "Excepciones",
     "excess": "En exceso",
     "exclude-invalid": "Excluir inválidos",
@@ -592,7 +592,7 @@
     "export": "Exportar",
     "export-bill": "Factura de exportación",
     "extra-file": "Archivo extra",
-    "failed": "Fallido",
+    "failed": "Niepowodzenie",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código de la família",
@@ -637,7 +637,7 @@
     "footer-text": "Texto pie de página",
     "for-admins": "Para administradores",
     "for-all": "Para todos",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "Dla wszystkich ćwiczeń",
     "for-purchase": "Se compra",
     "for-sale": "Se vende",
     "foresee": "Prever",
