--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -122,25 +122,25 @@
     "attribute-value-1": "Valor 1 da variante do produto",
     "attribute-value-2": "Valor 2 da variante do producto",
     "attribute-value-3": "valor-do-atributo-3",
-    "attribute-value-4": "attribute-value-4",
+    "attribute-value-4": "Valor de atributo 4",
     "attribute-values": "Valor do atributo",
     "attributes": "Atributos",
-    "audio": "Audio",
+    "audio": "Áudio",
     "august": "Agosto",
-    "auth-token-invalid": "Calve de API no válida",
-    "authentication": "authentication",
+    "auth-token-invalid": "Clave de API inválida",
+    "authentication": "autenticación",
     "auto": "Auto",
     "auto-apply-to": "Automaticamente aplicar a",
     "automatic": "Automático",
     "available": "acessível",
-    "average": "Media",
+    "average": "Média",
     "average-cost": "Custo médio",
-    "average-purchase-price": "average-purchase-price",
+    "average-purchase-price": "Precio medio de compra",
     "back": "Costas",
-    "background-color": "Color de fondo",
+    "background-color": "Cor de fundo",
     "background-overlay": "Color de fondo superpuesto (overlay)",
     "badge": "Distintivo",
-    "balance": "Equilibrar",
+    "balance": "Equilíbrio",
     "balance-account": "Saldo em conta",
     "balance-account-abreviated": "Conta de saldo abreviada",
     "balance-amounts": "Trial Balance",
@@ -149,9 +149,9 @@
     "balances": "Balanços",
     "bank-account": "Conta Bancária",
     "bank-accounts": "contas bancárias",
-    "bank-mandate": "bank-mandate",
-    "bank-mandate-date": "Data obrigatória",
-    "banking-movements": "Movimientos bancarios",
+    "bank-mandate": "Mandato bancário",
+    "bank-mandate-date": "Data do mandato",
+    "banking-movements": "Movimentos bancários",
     "barcode": "Código de barras",
     "bcc": "BCC",
     "big": "Grande",
