--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -107,7 +107,7 @@
     "app-preferences": "Preferências da aplicação",
     "applied-tax": "Imposto aplicado",
     "apply": "Aplicar",
-    "approve": "Aprobar",
+    "approve": "Aprovar",
     "approve-document": "Aprovar Documento",
     "approve-document-same-date": "Aprovar documento na mesma data",
     "approved": "Aprovado",
@@ -115,32 +115,32 @@
     "are-you-sure": "Isto não pode ser desfeito. Tem certeza que deseja continuar?",
     "are-you-sure-action": "Esta ação requer confirmação. Você está seguro de continuar?",
     "asset": "Ativo",
-    "assigned": "Asignado",
+    "assigned": "Atribuído",
     "attached-file": "Ficheiro anexo",
     "attached-files": "Ficheiros anexos",
     "attribute": "Atributo",
-    "attribute-value-1": "Attribute value 1",
-    "attribute-value-2": "Attribute value 2",
-    "attribute-value-3": "attribute-value-3",
-    "attribute-value-4": "attribute-value-4",
+    "attribute-value-1": "Valor do atributo 1",
+    "attribute-value-2": "Valor do atributo 2",
+    "attribute-value-3": "Valor do atributo 3",
+    "attribute-value-4": "Valor do atributo 4",
     "attribute-values": "Attribute values",
     "attributes": "Atributos",
-    "audio": "Audio",
+    "audio": "Áudio",
     "august": "Agosto",
-    "auth-token-invalid": "Calve de API no válida",
-    "authentication": "authentication",
+    "auth-token-invalid": "Chave de autenticação inválida",
+    "authentication": "autenticação",
     "auto": "Auto",
     "auto-apply-to": "Automaticamente aplicar a",
     "automatic": "Automático",
     "available": "acessível",
-    "average": "Media",
+    "average": "Média",
     "average-cost": "Custo médio",
-    "average-purchase-price": "average-purchase-price",
+    "average-purchase-price": "preço médio de compra",
     "back": "Costas",
-    "background-color": "Color de fondo",
+    "background-color": "Cor de fundo",
     "background-overlay": "Color de fondo superpuesto (overlay)",
     "badge": "Distintivo",
-    "balance": "Equilibrar",
+    "balance": "Equilíbrio",
     "balance-account": "Balance account",
     "balance-account-abreviated": "Balance account abreviated",
     "balance-amounts": "Trial Balance",
