--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -746,8 +746,8 @@
     "import": "Import",
     "import-accounting-plan": "Import accounting plan",
     "import-accounting-plan-p": "Leave this field blank to use the default accounting plan. Or select a file with your personalized accounting plan.",
-    "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "import-file": "Import file",
+    "in-progress": "In progress",
     "in-stock": "In stock",
     "inactive": "Inactive",
     "income-and-expenses": "Income and Expenses",
