--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -255,14 +255,14 @@
     "code": "Codi",
     "codiso": "Còdic ISO",
     "color": "Color",
-    "color-danger": "Color peligro",
-    "color-dark": "Color oscuridad",
-    "color-info": "Color info",
-    "color-light": "Color luz",
-    "color-primary": "Color primario",
-    "color-secondary": "Color secundario",
-    "color-success": "Color éxito",
-    "color-warning": "Color advertencia",
+    "color-danger": "Color perill",
+    "color-dark": "Color foscor",
+    "color-info": "Informació de color",
+    "color-light": "Color llum",
+    "color-primary": "Color primari",
+    "color-secondary": "Color secundari",
+    "color-success": "Color èxit",
+    "color-warning": "Color advertència",
     "colors": "Colors",
     "column": "Columna",
     "columns": "Columnes",
@@ -280,8 +280,8 @@
     "company-commission-info": "Només s'aplicarà a l'empresa seleccionada",
     "company-manager": "Administrador de l'empresa",
     "company-name": "Nom de l'empresa",
-    "company-warehouse": "Empresa\/Almacén",
-    "comparative": "Comparativo",
+    "company-warehouse": "Empresa\/Magatzem",
+    "comparative": "Comparatiu",
     "compared": "Comparat",
     "compatible": "Compatible",
     "completed": "Completat",
