Añadidos impuestos de Guatemala y actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -125,7 +125,7 @@
     "attribute-value-4": "Atributo 4",
     "attribute-values": "Valores de atributo",
     "attributes": "Atributos",
-    "audio": "Audio",
+    "audio": "Zvuk",
     "august": "Srpen",
     "auth-token-invalid": "Clave de API no válida",
     "authentication": "Autenticación",
@@ -340,7 +340,7 @@
     "crons": "Crons",
     "currency": "Divisa",
     "currency-position": "Posición símbolo de divisa",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Aktuální čtvrtletí",
     "current-risk": "Riesgo actual",
     "customer": "Cliente",
     "customer-account-not-found": "Subcuenta del cliente no encontrada",
@@ -365,16 +365,16 @@
     "customers": "Clientes",
     "customize": "Personalizar",
     "daily": "Diario",
-    "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
-    "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
-    "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
+    "dasboard-backup-li1": "Pokud smažete nebo odinstalujete FakturaScripty, ztratíte data.",
+    "dasboard-backup-li2": "Pokud smažete nebo odinstalujete XAMPP, ztratíte data.",
+    "dasboard-backup-li3": "Pokud ztratíte, formátujete nebo zničíte počítač, ztratíte data.",
     "dashboard": "Tablero",
-    "dashboard-backup": "Copia de seguridad",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-backup": "Záloha",
+    "dashboard-backup-p": "Pamatujte, že máte FakturaScripty nainstalovány na svém počítači, data (faktury, zákazníci atd...) jsou tedy uložena pouze na vašem počítači. Pravidelně dělejte zálohy a uchovávejte tyto zálohy mimo počítač.",
     "dashboard-for": "Tablero de %company%",
     "data-source": "Datos de origen",
     "database": "Base de datos",
-    "database-error": "Error al conectar a la base de datos",
+    "database-error": "Chyba při připojení k databázi",
     "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
     "date": "Fecha",
     "date-in": "Fecha entrada",
@@ -386,7 +386,7 @@
     "dateentry-wildcard-info": "Fecha indicada en la cabecera del asiento contable",
     "day": "Día",
     "days": "Días",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Počet dní udržení logů",
     "days-until-expiration": "Días hasta vencimiento",
     "db-host": "Host base de datos",
     "db-name": "Nombre de base de datos",
@@ -397,7 +397,7 @@
     "db-user": "Usuario base de datos",
     "debit": "Debe",
     "debug-mode": "Modo depuración",
-    "december": "Diciembre",
+    "december": "Prosinec",
     "decimal-separator": "Separador de decimales",
     "decimals": "Decimales",
     "default": "Por defecto",
@@ -413,10 +413,10 @@
     "delete-closing": "Eliminar asientos de cierre",
     "delete-data": "Borrar datos",
     "delete-file": "Eliminar archivo",
-    "delete-logs": "Eliminar historial",
+    "delete-logs": "Smazat historii",
     "delete-opening": "Eliminar el asiento de apertura",
     "delete-record": "Eliminar registro",
-    "Deleted": "Eliminado",
+    "Deleted": "Smazáno",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
     "delivery-note": "Albarán",
     "delivery-note-email-subject": "Su albarán %code%",
