--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1075,7 +1075,7 @@
     "origin": "Origin",
     "origin-warehouse": "Origin warehouse",
     "original": "Original",
-    "original-file": "Fichero original",
+    "original-file": "Original file",
     "other-data": "Other data",
     "others-filters": "Others filters",
     "out-of-stock": "Out of stock",
@@ -1158,7 +1158,7 @@
     "plugins": "Plugins",
     "plugins-p": "Plugins allow adding new features. Add the ones you need now, or do it whenever you want from the admin menu.",
     "points": "Points",
-    "points-of-interest": "Puntos de interés",
+    "points-of-interest": "Points of interest",
     "port": "Port",
     "position": "Position",
     "positive-balance": "Positive balance",
