--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -479,7 +479,7 @@
     "documents-generated": "Dokumentuak sortuta",
     "domiciled": "Helbideratua",
     "done": "Eginda",
-    "done-date": "Fecha finalización",
+    "done-date": "Bukatze data",
     "dont-sell-above-pvp": "Salmenta prezioaren gainetik ez saldu",
     "dont-sell-below-cost": "Ez saldu kostu prezioaren azpitik",
     "download": "Deskarga",
@@ -491,7 +491,7 @@
     "dto": "Beherapena",
     "dto-2": "2. deskontua",
     "duplicate-record": "Erregistro bikoiztua",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Erreferentzia '%reference%' bikoiztua",
     "duplicated-request": "Bikoiztutako eskaera",
     "duration": "Iraupena",
     "edit": "Editatu",
@@ -502,7 +502,7 @@
     "email-not-configured": "Posta elektronikoa ez dago konfiguratuta. Administratzailea, kontrol panela, aplikazioaren lehentasunak menutik ahal duzu konfiguratu.",
     "email-not-sent": "Bidali gabe",
     "email-notification": "Email Jakinarazpena",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
+    "email-notification-disabled": "Email jakinarazpena %name% desgaituta dago",
     "email-notification-not-exists": "%name% mezu elektronikoaren jakinarazpena ez da aurkitu",
     "email-replies": "Posta elektronikoen erantzuna",
     "email-replies-to": "Email honen erantzunak %email% helbidera joango dira",
@@ -521,7 +521,7 @@
     "enable-api": "APIa gaitu",
     "enable-updates-beta": "Aktibatu beta eguneraketak",
     "enabled": "Aktiboa",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Pluginak gaituta",
     "encrypt": "Enkriptatzea",
     "end-date": "Amaiera data",
     "end-time": "Amaierako ordua",
