--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -175,7 +175,7 @@
     "calculated-net-diff": "Differenza trovata nel calcolare il netto. %net% VS %net2%",
     "calculated-surcharge-diff": "Differenza trovata nel calcolare il sovrapprezzo. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Differenza trovata nel calcolare l'IVA totale. %tax% VS %tax2%",
-    "calculation": "calculation",
+    "calculation": "calcolo",
     "calendar": "calendario",
     "can-not-open-zip-file": "Impossibile aprire il file zip '0'",
     "cancel": "Annulla",
@@ -185,14 +185,14 @@
     "cant-assign-date-already-regularized": "Non si può assegnare la data 0 perché esiste già una regolarizzazione di 1 per quel periodo.",
     "cant-assing-subaccount-supplier": "Impossibile associare il subaccount al provider 0",
     "cant-associate-customer-subaccount": "Impossibile associare il subaccount per il client 0",
-    "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree uno nuevo.",
+    "cant-change-accounting-entry-exercise": "Non è possibile cambiare l'esercizio dell'operazione contabile. Creane uno nuovo.",
     "cant-change-agent-in-settlement": "cant-change-agent-in-settlement",
     "cant-connect-database": "Impossibile connettersi al database!",
     "cant-convert-to-innodb": "Impossibile convertire la tabella %1$s to'InnoDB Essenziale per FacturaScripts.",
     "cant-create-customer-subaccount": "Impossibile creare il subaccount cliente",
     "cant-create-folder": "Impossibile creare la cartella.",
     "cant-create-subaccount-supplier": "Impossibile creare il subaccount per il provider",
-    "cant-delete-audit-log": "No se puede eliminar un registro de auditoria",
+    "cant-delete-audit-log": "Impossibile eliminare un registro di audit",
     "cant-delete-default-company": "cant-delete-default-company",
     "cant-delete-default-country": "Impossibile eliminare il paese predefinito",
     "cant-delete-default-currency": "cant-delete-default-currency",
@@ -201,19 +201,19 @@
     "cant-delete-default-tax": "Impossibile eliminare la tassa predefinita",
     "cant-delete-default-warehouse": "cant-delete-default-warehouse",
     "cant-delete-last-user": "Impossibile eliminare l'ultimo utente",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-variant-with-documents": "Impossibile eliminare il prodotto o variante %reference% perché è già stato acquistato o venduto. Puoi però bloccarlo se desideri.",
     "cant-load-controller": "Impossibile caricare il controller.",
     "cant-modify-reference": "Non modificare il riferimento.",
     "cant-remove-accounting-entry": "cant-remove-accounting-entry",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "Impossibile eliminare una fattura che ha già una fattura di rimborso",
     "cant-remove-receipt": "cant-remove-receipt",
-    "cant-update-audit-log": "No se puede modificar un registro de auditoria",
+    "cant-update-audit-log": "Impossibile aggiornare un registro di audit",
     "card": "Carta",
     "carrier": "Vettore",
     "carriers": "I vettori",
-    "cash": "Efectivo",
-    "categories": "Categorias",
-    "category": "Categoría",
+    "cash": "Contanti",
+    "categories": "Categorie",
+    "category": "Categoria",
     "cc": "CC",
     "center": "Center",
     "change": "cambiamento",
