--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -660,7 +660,7 @@
     "general-concepts": "Conceptos generales",
     "general-data": "Datos generales",
     "generate": "Generar",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Generuj wpisy księgowe",
     "generate-accounting-entry": "Generar asiento contable",
     "generate-doc-type": "Generar tipo de documento",
     "generate-invoice": "Crear factura",
@@ -708,7 +708,7 @@
     "group-or-split-p": "Este asistente permite generar un nuevo documento a partir de las líneas de otros. Seleccione las cantidades que desea usar, la fecha del nuevo documento y pulse el botón generar.",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Ma załączniki",
     "has-parent": "Tiene padre",
     "hash": "Hash",
     "header": "Cabecera",
@@ -746,8 +746,8 @@
     "import": "Importar",
     "import-accounting-plan": "Importar plan contable",
     "import-accounting-plan-p": "Deje este campo en blanco para usar el plan contable predeterminado. O bien seleccione un archivo con su plan contable personalizado.",
-    "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "import-file": "Plik importu",
+    "in-progress": "W trakcie",
     "in-stock": "En stock",
     "inactive": "Inactivo",
     "income-and-expenses": "Ingresos y Gastos",
@@ -773,7 +773,7 @@
     "invalid-date-there-are-invoices-after": "Fecha no válida: %date%. La factura %other% es posterior y sin embargo tiene fecha anterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
     "invalid-date-there-are-invoices-before": "Fecha no válida: %date%. La factura %other% es anterior a esta y sin embargo tiene fecha posterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
     "invalid-iban": "IBAN no válido: %iban%",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Nieprawidłowy kod ISO ''%iso-code%",
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
