--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -162,11 +162,11 @@
     "block-date": "Block date",
     "blocked": "Bloqueado",
     "blocked-date": "Bloqueado em",
-    "body": "Body",
+    "body": "Corpo",
     "book": "Reserve",
-    "box-closed-ok": "Box closed correctly",
-    "boxes": "Cajas",
-    "browse": "Examinar",
+    "box-closed-ok": "Caixa fechada corretamente",
+    "boxes": "Caixas",
+    "browse": "Navegar",
     "business-name": "Nome da empresa",
     "buy": "Comprar",
     "cache": "Cache",
