--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -149,9 +149,9 @@
     "balances": "Balanços",
     "bank-account": "Conta Bancária",
     "bank-accounts": "contas bancárias",
-    "bank-mandate": "bank-mandate",
-    "bank-mandate-date": "Data obrigatória",
-    "banking-movements": "Movimientos bancarios",
+    "bank-mandate": "Mandato bancário",
+    "bank-mandate-date": "Data do mandato",
+    "banking-movements": "Movimentos bancários",
     "barcode": "Código de barras",
     "bcc": "BCC",
     "big": "Grande",
