--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -298,12 +298,12 @@
     "contact-information": "Informació de contacte",
     "contact-person": "Persona de contacte",
     "contacts": "Contactes",
-    "context": "Contexto",
+    "context": "Context",
     "continue": "Continuar",
     "contract": "Contracte",
     "contracts": "Contractes",
     "control-panel": "Tauler de control",
-    "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
+    "control-panel-decimal-warning": "Advertència: aquest canvi s'aplicarà als preus de productes, però també als totals de factures, assentaments, etc.",
     "controller": "Controlador",
     "controller-error": "Erro del controlador",
     "controller-not-found": "No s'ha trobat el controlador",
